--- a/dpc-web/css/our-project-detail.css
+++ b/dpc-web/css/our-project-detail.css
@@ -25,6 +25,14 @@
 }
 
 @font-face {
+    font-family: 'PlusJakartaSans-Light';
+    src: url('../fonts/Plus_Jakarta_Sans/Plus_Jakarta_Sans/static/PlusJakartaSans-Light.ttf') format('truetype');
+    font-weight: 100;
+    font-style: normal;
+}
+
+
+@font-face {
     font-family: 'PlusJakartaSans-SemiBold';
     src: url('../fonts/Plus_Jakarta_Sans/Plus_Jakarta_Sans/static/PlusJakartaSans-SemiBold.ttf') format('truetype');
     font-weight: normal;
@@ -188,176 +196,60 @@ h2.title span {
     gap: 100px;
 }
 
-.body_head {
-    padding: 140px 0 75px;
-}
-
-.body_head h1 {
-    font-size: 80px;
-    text-align: center;
-    /* text-transform: uppercase; */
-    font-family: "DP Céline";
-    color: #D5CCC3;
-}
-
-.body_head .menu_fabric{
-    display: flex;
-    justify-content: center;    
-    margin-top: 20px;
-}
-
-.body_head .menu_fabric #next-tab{
-    text-align: center;
-    font-family: "PlusJakartaSans-Medium";
-    font-size: 16px;
-    text-decoration: none;
-    color:#BEB0A2;
-    margin-top: -10px;
-    padding-left: 4px;
-    padding-right: 4px;
-}
-
-.body_head .menu_fabric #current-tab{
-    text-align: center;
+.project-info p{
+    font-size: 20px;
+    width: 524px;
+    line-height: 32px;
     font-family: "PlusJakartaSans-SemiBold";
-    font-size: 16px;
-    text-decoration: none;
-    /* color:#BEB0A2; */
-    margin-top: -10px;
-    padding-left: 4px;
-    padding-right: 4px;
-    color: #F7F5F3;
-}
-
-.body_head .menu_fabric p{
-    width: 8px;
-    height: 24px;
-
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    color: #BEB0A2;
-
-}
-
-.body_head #line{
-    /* Line 3 */
-
-    margin-top :15px;
-    width: 1280px;
-    height: 0px;
-    border: 1px solid rgba(253, 252, 245, 0.2);
-
-}
-
-/* tab collection fabric */
-
-.tab-general-fabric .tab-collection-design{
-    display: flex;
-    justify-content: center;
-    margin-left: 30px;
-    gap: 24px;
-}
-.tab-general-fabric .tab-collection-design #next-tab{
-    /* Collection */
-    text-decoration: none ;
-    width: 203px;
-    height: 72px;
-
-    /* iv - 48 */
-    font-family: 'DP Céline';
-    font-style: normal;
-    font-weight: 100;
-    font-size: 48px;
-    line-height: 72px;
-    /* identical to box height, onextr 150% */
-    display: flex;
-    align-items: center;
-    text-align: center;
-    letter-spacing: 2px;
-
-    /* beige / 600 */
-    color: #8D7863;
-}
-.tab-general-fabric .tab-collection-design #current-tab{
-    /* Collection */
-    text-decoration: none;
-    width: 203px;
-    height: 72px;
-
-    /* iv - 48 */
-    font-family: 'DP Céline';
-    font-style: normal;
-    font-weight: 100;
-    font-size: 48px;
-    line-height: 72px;
-    /* identical to box height, or 150% */
-    display: flex;
-    align-items: center;
-    text-align: center;
-    letter-spacing: 2px;
-    color: var(--main);
-}
-
-
-/* table product */
-
-
-.table-projects .container{
-    display: flex;
-    justify-content: space-between;
-    gap: 64px;
-    height: 407px;
-    margin-bottom: 80px;
-}
-
-.table-projects .container .froject-item{
-    width: 624px;
-    gap: 8px;
-    padding: 0px;
-}
-
-.table-projects .container .froject-item .img{
-    height: 333px;
-}
-
-.table-projects .container .froject-item #block-collection-lable{
-    gap: 4px;
-}
-
-.table-projects .container .froject-item #collection-name{
-    font-family: 'DP Céline';
-    font-size: 36px;
-    color: var(--main);
-    margin-top: 16px;
+    font-weight: 500;
     letter-spacing: 1px;
-    /* color: #BEB0A2; */
+    color: #F7F5F3;
+    margin-bottom: 48px;
 }
-
-.table-projects .container .froject-item #collection-quantity{
-    font-family: 'PlusJakartaSans-Medium';
-    font-size: 14px;
-    color: #BEB0A2;
+.project-info h3{
+    font-size: 20px;
+    line-height: 32px;
+    font-family: "PlusJakartaSans-SemiBold";
+    font-weight: 500;
+    letter-spacing: 1px;
+    color: #9AA4B2;
+}
+.project-info h5{
+    font-size: 20px;
+    width: 524px;
+    line-height: 32px;
+    font-family: "PlusJakartaSans-SemiBold";
+    font-weight: 500;
+    letter-spacing: 1px;
+    color: #F7F5F3;
+    margin-bottom: 48px;
+    text-transform: uppercase;
     
 }
-
-.table-projects .button-showmore {
-    display: flex;
-    justify-content: center;
-    margin: -17px 0px 103px;
-}
-.table-projects .button-showmore #btn-showmore{
-    background-color: var(--main) ;
-    border-color: var(--main);
-    width: 357px;
-    height: 68px;
-    border-radius: 100px;
-    color: #3B3229;
-    font-family: 'PlusJakartaSans-Medium';
-    font-size: 20px;
-    letter-spacing: 3%;
+.project-info .line1{
+    width: 100%;
+    border: 1px solid rgba(253, 252, 245, 0.2);
+    margin-bottom: 24px;
 }
 
+.project-info .img-1{
+    margin: 80px 0px 80px 0px;
+}
+.project-info .img-2{
+    margin: 80px 0px 20px 0px;
+}
+
+.project-info h2{
+    font-size: 80px;
+    line-height: 120px;
+    font-family: "DP Céline";
+    text-transform: uppercase;
+    font-weight: 100;
+    margin: 0;
+    letter-spacing: 2px;
+    z-index: 999;
+    pointer-events: none;
+}
 
 /* menu-area */
 .menu-area {
@@ -372,8 +264,18 @@ h2.title span {
     width: 1440px;
     height: 960px;
     background-color: #202E41;
+    opacity: 0;
+    transform: translateY(-100%);
+    transition: opacity 0.5s ease, transform 0.5s ease;
+    z-index: 1000;
     
 }
+.menu-area.show {
+    display: block;
+    opacity: 1;
+    transform: translateY(0);
+}
+
 .menu-area .header-menu{
     max-width: 1440px;
     
@@ -408,6 +310,96 @@ h2.title span {
 }
 .body-menu .option-menu:hover{
     color: #F7F5F3;
+}
+/******************************* search-area ************************/
+.search-area {
+    position: absolute;
+    width: 100%;
+    height: auto;
+    top: 0;
+    /* left: 0; */
+    display: flex;
+    /* justify-content: center; */
+    flex-direction: column;
+    width: 1440px;
+    height: 960px;
+    background-color: #202E41;
+    opacity: 0;
+    transform: translateY(-100%);
+    transition: opacity 0.5s ease, transform 0.5s ease;
+    z-index: 1000;
+    
+}
+.search-area.show {
+    display: block;
+    opacity: 1;
+    transform: translateY(0);
+}
+.search-area .header-search{
+    max-width: 1440px;
+    
+}
+
+.search-area .header-search .menu_right{
+    gap: 8px;
+}
+.search-area .header-search .menu_right .nav_item{
+    color: #D5CCC3;
+    text-decoration: none;
+    font-family: "PlusJakartaSans-SemiBold";
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.body-search {
+    /* position: relative; */
+    margin: 220px 348px;
+    gap: 160px;
+}
+.body-search .option-menu{
+    font-family: "DP Céline";
+    text-decoration: none;
+    font-size: 48px;
+    font-weight: 100;
+    line-height: 72px;
+    letter-spacing: 2px;
+    /* text-align: center; */
+    color: #BEB0A2;
+    margin-bottom: 24px;
+}
+.body-search .input-group {
+    width: 654px;
+}
+.body-search .input-group input{
+    background-color: transparent;
+    border-width: 0px 0px 1px 0px;
+    border-radius: 0px;
+    border-color: #697586;
+    width: 655px;
+    height: 100px;
+    color: #FCFCFD;
+    font-size: 48px;
+    font-family: 'PlusJakartaSans-Light';
+}
+.body-search .input-group input::placeholder {
+    color: #697586;
+    font-size: 48px;
+    letter-spacing: 1%;
+    font-weight: 100;
+    opacity: 1; /* Firefox */
+}
+.body-search .input-group input::-ms-input-placeholder { /* Edge 12 -18 */
+    color: #697586;
+    font-size: 48px;
+    letter-spacing: 1%;
+    font-weight: 100;
+}
+.body-search h4{
+    font-weight: 500;
+    font-size: 20px;
+    letter-spacing: 1px;
+    margin-left: 15px;
+    /* font-family: 'PlusJakartaSans-Light'; */
 }
 
 
