--- a/dpc-web/css/our-project-detail.css
+++ b/dpc-web/css/our-project-detail.css
@@ -98,6 +98,23 @@ h2.title span {
     background-color: #202E41;
     position: relative;
 }
+.layout .hidden{
+    opacity: 0;
+    transition: opacity 0.5s;
+}
+.loader {
+    background-color: #202E41;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    animation: fadeOut 2s forwards;
+}
+@keyframes fadeOut {
+    0% { opacity: 1; }
+    100% { opacity: 0; visibility: hidden; }
+}
 
 /* header */
 .header {
