--- a/dpc-web/css/our-project.css
+++ b/dpc-web/css/our-project.css
@@ -107,6 +107,32 @@ h2.title span {
     position: relative;
 }
 
+.layout.hidden{
+    opacity: 0;
+    transition: opacity 0.5s;
+}
+.loader {
+    background-color: #202E41;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    animation: fadeOut 2s forwards;
+}
+@keyframes fadeOut {
+    0% { opacity: 1; }
+    100% { opacity: 0; visibility: hidden; }
+}
+.loader img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain; /* Ensures the image stays within its container */
+}
+
 /* header */
 .top_head{
     z-index: 99;
