--- a/dpc-web/css/style2.css
+++ b/dpc-web/css/style2.css
@@ -272,7 +272,7 @@ h2.title span {
     left: 50%;
     transform: translate(-50%, -50%);
 }
-.banner img{
+.banner .image-container img{
     position: absolute;
     max-width: none;
     top: 50%;
@@ -285,6 +285,27 @@ h2.title span {
     /* transition: transform 0.5s ease-in-out; */
 
 }
+
+/* .surrounding-images {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    justify-content: space-around;
+    width: 400px;
+    height: 280px;
+}
+
+.surround-img {
+    position: absolute;
+    height: auto;
+} */
+/* .surround-img:nth-child(1) { top: 0%; left: 0; transform: translateX(-50%); } */
+/* .surround-img:nth-child(2) { top: 0; left: 50%; transform: translateX(-50%); }
+.surround-img:nth-child(3) { top: 0%; right: 50%; transform: translateX(-50%); }
+.surround-img:nth-child(4) { bottom: 50%; left: 50%; transform: translate(-50%, -50%); }
+.surround-img:nth-child(5) { bottom: 50%; right: 50%; transform: translate(-50%, -50%);} */
 
 /* .banner .content, .banner .swiper-button-next, .banner .swiper-button-prev {
     transform: translateY(200px);
