--- a/public/css/product-fabric-detail.css
+++ b/public/css/product-fabric-detail.css
@@ -357,14 +357,17 @@ h2.title span {
     opacity: 60%;
 }
 
-.layout .filter-bar {
+.layout .filter-bar{
 
     position: absolute;
     width: 680px;
-    height: 2017px;
+    height: 100vh;
     right: 0px;
     top: 0px;
     background: #202E41;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    z-index: 2;
 }
 
 .filter-bar .container {
