--- a/public/css/product-fabric-design.css
+++ b/public/css/product-fabric-design.css
@@ -341,10 +341,13 @@ h2.title span {
 
     position: absolute;
     width: 680px;
-    height: 2017px;
+    height: 100vh;
     right: 0px;
     top: 0px;
     background: #202E41;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    z-index: 2;
 }
 
 .filter-bar .container{
