--- a/public/css/our-project-detail.css
+++ b/public/css/our-project-detail.css
@@ -48,6 +48,7 @@ h2.title span {
     display: flex;
     justify-content: center;
     background-color: #202E41;
+    background-image: none;
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -112,6 +113,34 @@ h2.title span {
 }
 .top_head{
     z-index: 999;
+    animation: none;
+}
+
+.body_head{
+    display: none;
+}
+.header .container:before {
+    background: url(../images/spacejoy-YI2YkyaREHk-unsplash.jpg);
+    background-position-y: center;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    content: "";
+}
+
+.header .container:after {
+    content: '';
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(rgba(32, 46, 65, 0.3) 0%, rgba(32, 46, 65, 0.8) 100%);
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
 }
 .top_head .nav_item {
     font-family: "PlusJakartaSans-SemiBold";
