--- a/public/css/app.css
+++ b/public/css/app.css
@@ -923,6 +923,30 @@ section.project .img-area{
     /* font-family: 'PlusJakartaSans-Light'; */
 }
 
+.table-products .button-showmore #btn-showmore{
+    position: relative;
+}
+
+.table-products .button-showmore #btn-showmore.active:after {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #e9ecefc9;
+    border-radius: 100px;
+    z-index: 0;
+}
+
+span#btn-loading{
+    position: absolute;
+    top: calc(50% - 7px);
+    left: calc(50% - 7px);
+    color: #202E41;
+    z-index: 1;
+}
+
 /***************************************** footer *******************************/
 footer .line {
     overflow: hidden;
