--- a/dpc-web/css/style2.css
+++ b/dpc-web/css/style2.css
@@ -60,6 +60,10 @@ body {
     
 }
 
+a{
+    text-decoration: none;
+}
+
 ul{
     margin: 0;
     padding: 0;
@@ -91,7 +95,7 @@ h2.title span {
 .swiper-button-next:after,
 .swiper-button-prev:after {
     content: '';
-    background-image: url(../images/arrow.svg);
+    background-image: url('/images/arrow.svg');
     width: 64px;
     height: 64px;
 }
@@ -105,7 +109,7 @@ h2.title span {
     display: flex;
     justify-content: center;
     
-    background: url('../images/BG-items.webp');
+    background: url('/images/BG-items.webp');
     background-color: #202E41;
     background-size: cover;
     background-repeat: no-repeat;
@@ -113,19 +117,13 @@ h2.title span {
 }
 
 .layout {
-    /* background: url('../images/BG-items.webp'); */
+    /* background: url('/images/BG-items.webp'); */
     /* background-size: cover;
     background-repeat: no-repeat;
     mix-blend-mode: lumino1sity !important; */
     max-width: 1440px;
     /* background-color: #202E41; */
-    /* overflow-y: scroll;
-    scroll-snap-type: y mandatory; */
 }
-
-/* .slides{
-    scroll-snap-align: start;
-} */
 
 /* header */
 .top_head {
@@ -171,7 +169,7 @@ h2.title span {
     }
 }
 .body_head {
-    padding: 30vh 0 10vh;
+    padding: 280px 0 100px;
 }
 
 .body_head h1 {
@@ -253,7 +251,7 @@ h2.title span {
     color: #D5CCC3;
 }
 
-.image-container {
+.banner .image-container {
 
     width: 600px;
     height: 400px;
@@ -286,57 +284,52 @@ h2.title span {
     border-radius: 10px;
     opacity: 1;
     overflow: hidden;
+    transition: 0.3s;
   }
   .banner .overlay-image:nth-child(2) {
-    width: 600px;
+    width: 300px;
     height: 300px;
-    top: 35%;
-    left: 50%;
+    top: 45%;
+    left: 39%;
     transform: translate(-50%, -50%);
-    z-index: 7;
+    z-index: 3;
   }
   .banner  .overlay-image:nth-child(3) {
-    width: 300px;
+    width: 400px;
     height: 250px;
-    top: 55%;
-    left: 32%;
+    top: 40%;
+    left: 60%;
     transform: translate(-50%, -50%);
-    z-index: 6;
+    z-index: 4;
   }
   .banner .overlay-image:nth-child(4) {
-    width: 300px;
-    height: 250px;
-    top: 45.5%;
-    left: 68%;
+    width: 270px;
+    height: 220px;
+    top: 60%;
+    left: 40%;
     transform: translate(-50%, -50%);
     z-index: 5;
   }
   .banner .overlay-image:nth-child(5) {
-    width: 300px;
-    height: 250px;
-    top: 62%;
-    left: 47%;
+    width: 400px;
+    height: 380px;
+    top: 60%;
+    left: 60%;
     transform: translate(-50%, -50%);
-    z-index: 4;
+    z-index: 6;
   }
-  .banner .overlay-image:nth-child(6) {
-    width: 600px;
-    height: 300px;
-    top: 66%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 7;
-  }
+
 
 /*************************** our service **************************/
 section.Our_Services {
-
     padding: 200px 0;
-
 }
 
 section.Our_Services .services_list {
     padding: 80px 0;
+}
+section.Our_Services .services_list .swiper-wrapper{
+    height: auto;
 }
 .img-wrapper-service {
     position: relative;
@@ -816,7 +809,6 @@ section.project .img-area{
 .body-search .input-group {
     width: 654px;
 }
-
 .body-search .input-group input:focus{
     box-shadow: none;
 }
@@ -850,6 +842,30 @@ section.project .img-area{
     letter-spacing: 1px;
     margin-left: 15px;
     /* font-family: 'PlusJakartaSans-Light'; */
+}
+
+.table-products .button-showmore #btn-showmore{
+    position: relative;
+}
+
+.table-products .button-showmore #btn-showmore.active:after {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #e9ecefc9;
+    border-radius: 100px;
+    z-index: 0;
+}
+
+span#btn-loading{
+    position: absolute;
+    top: calc(50% - 7px);
+    left: calc(50% - 7px);
+    color: #202E41;
+    z-index: 1;
 }
 
 /***************************************** footer *******************************/
