--- a/public/dpc-web/css/style2.css
+++ b/public/dpc-web/css/style2.css
@@ -288,36 +288,44 @@ h2.title span {
     overflow: hidden;
   }
   .banner .overlay-image:nth-child(2) {
-    width: 300px;
+    width: 600px;
     height: 300px;
-    top: 45%;
-    left: 39%;
+    top: 35%;
+    left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 3;
+    z-index: 7;
   }
   .banner  .overlay-image:nth-child(3) {
-    width: 400px;
+    width: 300px;
     height: 250px;
-    top: 40%;
-    left: 60%;
+    top: 55%;
+    left: 32%;
     transform: translate(-50%, -50%);
-    z-index: 4;
+    z-index: 6;
   }
   .banner .overlay-image:nth-child(4) {
-    width: 270px;
-    height: 220px;
-    top: 60%;
-    left: 40%;
+    width: 300px;
+    height: 250px;
+    top: 45.5%;
+    left: 68%;
     transform: translate(-50%, -50%);
     z-index: 5;
   }
   .banner .overlay-image:nth-child(5) {
-    width: 400px;
-    height: 380px;
-    top: 60%;
-    left: 60%;
+    width: 300px;
+    height: 250px;
+    top: 62%;
+    left: 47%;
     transform: translate(-50%, -50%);
-    z-index: 6;
+    z-index: 4;
+  }
+  .banner .overlay-image:nth-child(6) {
+    width: 600px;
+    height: 300px;
+    top: 66%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 7;
   }
 
 /*************************** our service **************************/
